padding-left: 10px;

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -438,6 +438,14 @@ $zen-auto-include-item-base: false;
     margin: 0;
   }
 }
+#block-campaignmonitor-454473ba9a4727caea867f18be3bb00b {
+  padding-left: 10px;
+  margin-bottom: 0;
+  margin-top: 10px;
+  p {
+    margin: 0;
+  }  
+}
 .section-studio {
   .page__title {
     display: none!important;
