--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -442,6 +442,12 @@ $zen-auto-include-item-base: false;
   padding-left: 10px;
   margin-bottom: 0;
   margin-top: 10px;
+  h2 {
+    font-size: 1em;
+    line-height: 1em;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
   p {
     margin: 0;
   }  
