--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -443,6 +443,7 @@ $zen-auto-include-item-base: false;
   margin-bottom: 0;
   margin-top: 10px;
   h2 {
+    color: $dark-gray;
     font-size: 1em;
     line-height: 1em;
     margin-bottom: 0;
