--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -451,7 +451,10 @@ $zen-auto-include-item-base: false;
   }
   p {
     margin: 0;
-  }  
+  }
+  .form-item {
+    margin: 0;
+  }
 }
 .section-studio {
   .page__title {
